[gd_scene load_steps=6 format=2]

[ext_resource path="res://font/ligature.tres" type="Curve" id=1]
[ext_resource path="res://code/ligature.gd" type="Script" id=2]

[sub_resource type="Gradient" id=3]
interpolation_mode = 2
colors = PoolColorArray( 1, 0.0652632, 0.0652632, 1, 0, 0.24353, 0.890625, 1 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 30 )

[node name="Line2D" type="Line2D"]
z_index = 3
points = PoolVector2Array( 0, 0, 50, -30, 50, -270, 100, -300 )
width_curve = ExtResource( 1 )
gradient = SubResource( 3 )
joint_mode = 1
script = ExtResource( 2 )

[node name="left_Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_Area2D"]
shape = SubResource( 1 )

[node name="right_Area2D" type="Area2D" parent="."]
position = Vector2( 100, -300 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_Area2D"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="left_Area2D" to="." method="_on_left_Area2D_area_entered"]
[connection signal="area_exited" from="left_Area2D" to="." method="_on_left_Area2D_area_exited"]
[connection signal="input_event" from="left_Area2D" to="." method="_on_left_Area2D_input_event"]
[connection signal="area_entered" from="right_Area2D" to="." method="_on_right_Area2D_area_entered"]
[connection signal="area_exited" from="right_Area2D" to="." method="_on_right_Area2D_area_exited"]
[connection signal="input_event" from="right_Area2D" to="." method="_on_right_Area2D_input_event"]
